--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -1,3 +1,4 @@
+  
 /* 
 Programme CSS
 -----------------
@@ -113,21 +114,16 @@ h1 {
 
 h2
 {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     width: 700px;
     height: 120px;
     font-size: 80px;
     font-family: 'kaushanscript', Impact, Helvetica,serif ;
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #3D923A, #BEFF7F);
-}
-h3
-{
-    text-align:center;
-    font-size: 40px;
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
 }
 
 #esquisse, #oeuvre,
